--- a/templates/index.html
+++ b/templates/index.html
@@ -25,12 +25,10 @@
                 <li><pre>Education:              Below Secondary, Bachelor's, Master's & above</pre></li>
                 <li><pre>Gender:                 m, f</pre></li>
                 <li><pre>Recruitment Channel:    sourcing, other, referred</pre></li>
-                <li><pre>No of Trainings:        Positive number from 1</pre></li>
+                <li><pre>No of Trainings:        Positive number</pre></li>
                 <li><pre>Age:                    Positive number</pre></li>
-                <li><pre>Previous Year Rating:   Positive decimal number</pre></li>
-                <li><pre>Length of Service:      Positive number from 1</pre></li>
                 <li><pre>KPIs_met >60%:          1 or 0</pre></li>
-                <li><pre>Awards Won              Positive number from 1</pre></li>
+                <li><pre>Awards Won              Positive number</pre></li>
                 <li><pre>Average Training Score: Positive number</pre></li>
             </ul>
         </div>
@@ -42,8 +40,6 @@
             <input type="text" name="recruitment_channel" placeholder="Recruitment Channel" required="required"/>
             <input type="number" name="no_of_trainings" placeholder="No of Trainings" required="required"/><br>
             <input type="number" name="age" placeholder="Age" required="required"/>
-            <input type="number" name="previous_year_rating" placeholder="Previous Year Rating" required="required"/>
-            <input type="number" name="length_of_service" placeholder="Length of Service" required="required"/><br>
             <input type="number" name="KPIs_met >60%" placeholder="KPIs_met >60%" required="required"/>
             <input type="number" name="awards_won?" placeholder="Awards Won" required="required"/>
             <input type="numer" name="avg_training_score" placeholder="Average Training Score" required="required"/><br>
