--- a/templates/index.html
+++ b/templates/index.html
@@ -34,13 +34,13 @@
         </div>
         <form action="{{url_for("predict")}}" method="post">
             <input type="text" name="department" placeholder="Department" required="required"/>
-            <input type="text" name="region" placeholder="Region" required="required"/>
-            <input type="text" name="education" placeholder="Education" required="required"/><br>
-            <input type="text" name="gender" placeholder="Gender" required="required"/>
+            <input type="text" name="region" placeholder="Region" required="required"/><br>
+            <input type="text" name="education" placeholder="Education" required="required"/>
+            <input type="text" name="gender" placeholder="Gender" required="required"/><br>
             <input type="text" name="recruitment_channel" placeholder="Recruitment Channel" required="required"/>
             <input type="number" name="no_of_trainings" placeholder="No of Trainings" required="required"/><br>
             <input type="number" name="age" placeholder="Age" required="required"/>
-            <input type="number" name="KPIs_met >60%" placeholder="KPIs_met >60%" required="required"/>
+            <input type="number" name="KPIs_met >60%" placeholder="KPIs_met >60%" required="required"/><br>
             <input type="number" name="awards_won?" placeholder="Awards Won" required="required"/>
             <input type="numer" name="avg_training_score" placeholder="Average Training Score" required="required"/><br>
             <button type="submit">Predict</button>
