--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,8 @@
                 <li class=''><strong>Education:</strong> Master's & above =0, Bachelor's=1, Below Secondary=2</li>
                 <li class=''><strong>Gender:</strong> male=1, female=0</li>
                 <li class=''><strong>Recruitment Channel:</strong> sourcing=0, referred=1 other=2</li>
-                <li class=''><strong>Age:</strong> Positive number</li>
+                <li class=''><strong>No. of Trainings:</strong> 1 to 10</li>
+                <li class=''><strong>Age:</strong> 18 to 60</li>
                 <li class=''><strong>KPI > 60%:</strong> yes=1, no=0</li>
                 <li class=''><strong>Award(s)?:</strong> yes=1, no=0</li>
                 <li class=''><strong>Average Training Score:</strong> Positive number</li>
@@ -38,6 +39,7 @@
                 <input class="p-2 my-2" type="number" min="0" max="2" name="education" placeholder="Education" required="required"/>
                 <input class="p-2 my-2" type="number" min="0" max="1" name="gender" placeholder="Gender" required="required"/>
                 <input class="p-2 my-2" type="number" min="1" max="3" name="recruitment_channel" placeholder="Recruitment Channel" required="required"/>
+                <input class="p-2 my-2" type="number" min="1" max="10" name="no_of_trainings" placeholder="No. of Trainings" required="required"/>
                 <input class="p-2 my-2" type="number" min="18" max="60" name="age" placeholder="Age?" required="required"/>
                 <input class="p-2 my-2" type="number" min="0" max="1" name="KPIs_met >60%" placeholder="KPI >60%?" required="required"/>
                 <input class="p-2 my-2" type="number" min="0" max="1" name="awards_won?" placeholder="Award(s)?" required="required"/>
