--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -41,6 +41,9 @@ h1 {
 li {
     font-size: 1.2rem;
     list-style: none;
+    margin-bottom: 10px;
+    /* line-height: 1.4rem; */
+    font-family: "Poppins";
 }
 
 input {
@@ -83,8 +86,16 @@ button {
 
 footer {
     box-shadow: 0px -1px 0px 1px #0000003b;
-    /* height: calc(100vh-20px); */
     margin-top: calc(13vh);
     padding-top: 5px;
     font-weight: bold;
+}
+
+@media screen and (max-width: 417px) {
+    input {
+        width: 100%;
+    }
+    li {
+        font-size: 17px;
+    }
 }
